--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,4 +18,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run
-        run: cargo +nightly test
+        run: |
+          cargo install cargo-bisect-rustc --features git2/vendored-openssl
+          cargo bisect-rustc
