--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,9 +6,14 @@ on:
       - main
 
 jobs:
-  rustup_test:
-    name: rustup_test
+  rustup_test_aarch64:
+    name: rustup_test_aarch64
     runs-on: "ubuntu-22.04-arm"
+
+    strategy:
+      matrix:
+        alpha: [0, 1, 2, 3]
+        beta: [0, 1, 2, 3]
 
     steps:
       - uses: actions/checkout@v4
@@ -21,4 +26,4 @@ jobs:
 
           rustup -V
 
-          rustup --verbose toolchain install nightly-2025-04-25
+          cargo clippy
